<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    style="@style/MyDialogStyle">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:animateLayoutChanges="true"
        android:background="@drawable/layer_card_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_equipped_item"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:id="@+id/radiogroupItems">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_destiny_knot"
                android:id="@+id/radio_destiny_knot"
                android:button="@null"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:drawableLeft="@drawable/ic_toggle_destiny_knot_selector"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_weight"
                android:id="@+id/radio_power_hp"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_hp_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:checked="false"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_bracer"
                android:id="@+id/radio_power_atk"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_atk_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_belt"
                android:id="@+id/radio_power_def"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_def_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_lens"
                android:id="@+id/radio_power_satk"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_satk_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_band"
                android:id="@+id/radio_power_sdef"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_sdef_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_power_anklet"
                android:id="@+id/radio_power_spd"
                android:button="@null"
                android:drawableLeft="@drawable/ic_toggle_power_spd_selector"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:enabled="true" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/background_light_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/label_unequip"
                android:id="@+id/radio_unequip"
                android:button="@null"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_press_white_lightgray_selector"/>
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_done"
            android:id="@+id/buttonClose"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_press_white_lightgray_selector" />

    </LinearLayout>
</ScrollView>
