<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/layer_card_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_type"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_gravity="left|top"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinnerShinyOptions"
            android:theme="@style/AppTheme"
            android:layout_gravity="left|top"
            android:layout_marginLeft="23dp"
            android:spinnerMode="dropdown"
            android:layout_marginRight="23dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_modifiers"
            android:id="@+id/textView5"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:gravity="center_horizontal" />

        <CheckBox
            android:button="@null"
            android:drawableLeft="@drawable/ic_toggle_shiny_charm_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_shiny_charm"
            android:id="@+id/checkBoxShinyCharm"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="4dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/background_light_gray"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />

        <CheckBox
            android:button="@null"
            android:drawableLeft="@drawable/ic_toggle_cherish_ball_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_masuda_method"
            android:id="@+id/checkBoxMasudaMethod"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_done"
        android:id="@+id/buttonClose"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_press_white_lightgray_selector" />

</LinearLayout>