<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer_card_background"
    android:baselineAligned="true">

    <RelativeLayout
        android:id="@+id/itemGridHeader"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:clickable="true">

        <TextView
            android:id="@+id/itemGridHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/label_stored_pokemons"
            android:layout_alignParentTop="false"
            style="@style/card_header_title"
            android:visibility="visible"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/separatorFragmentPokemonList2"
            android:layout_toStartOf="@+id/separatorFragmentPokemonList2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_remove"
                android:textOn="REMOVE"
                android:textOff="REMOVE"
                android:id="@+id/buttonFragmentPokemonListRemove"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="15sp"
                android:checked="false" />

            <View
                android:id="@+id/separatorFragmentPokemonList1"
                android:layout_width="1dp"
                android:layout_height="32dp"
                android:background="@color/background_light_gray"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:visibility="visible" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_add"
                android:id="@+id/buttonFragmentPokemonListAdd"
                android:background="@drawable/button_press_white_lightgray_selector"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:id="@+id/separatorFragmentPokemonList2"
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:background="@color/background_light_gray"
            android:layout_gravity="center_vertical"
            android:layout_alignTop="@+id/itemGridHeaderTitle"
            android:layout_toLeftOf="@+id/linearLayout"
            android:layout_toStartOf="@+id/linearLayout" />

    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_light_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_store_pokemons"
        android:id="@+id/textViewHintStore"
        style="@style/CapsLabel"
        android:textColor="@android:color/darker_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:layout_marginTop="4dp" />

    <TextView
        style="@style/CapsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hint_remove_pokemons"
        android:id="@+id/textViewHintDelete"
        android:textColor="@android:color/darker_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp" />

    <view
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="marcelo.breguenait.breedinghelper.ExpandableGridView"
        android:id="@+id/gridViewPokemonsList"
        android:numColumns="auto_fit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:verticalSpacing="4dp"
        android:horizontalSpacing="4dp"
        android:stretchMode="columnWidth"
        android:columnWidth="48dp"
        android:animateLayoutChanges="true"/>

</LinearLayout>