<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:id="@+id/eggGridSeparatorHorizontal"
        android:background="#ffeaeaea"
        android:contentDescription="@null"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/LinearLayoutEgg"
        android:background="#0cf9fffb"
        android:layout_marginTop="3dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="10"
            android:rowCount="11"
            android:id="@+id/gridviewEggIVs"
            android:visibility="visible"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_hp"
                android:id="@+id/labelEggHP"
                android:layout_row="0"
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_spd"
                android:id="@+id/labelEggSPD"
                android:layout_row="0"
                android:layout_column="6"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-10dp"
                android:layout_marginBottom="4dp" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggSDEF"
                android:checked="false"
                android:button="@android:color/transparent"
                android:background="@drawable/ic_iv_star_selector"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_row="1"
                android:layout_column="5"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggSPD"
                android:checked="false"
                android:background="@drawable/ic_iv_diamond_selector"
                android:button="@android:color/transparent"
                android:layout_marginBottom="5dp"
                android:layout_row="1"
                android:layout_column="6"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggDEF"
                android:checked="false"
                android:background="@drawable/ic_iv_square_selector"
                android:button="@android:color/transparent"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggSATK"
                android:checked="false"
                android:background="@drawable/ic_iv_heart_selector"
                android:button="@android:color/transparent"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_row="1"
                android:layout_column="4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_atk"
                android:id="@+id/labelEggATK"
                android:layout_row="0"
                android:layout_column="2"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-10dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_def"
                android:id="@+id/labelEggDEF"
                android:layout_row="0"
                android:layout_column="3"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-10dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_satk"
                android:id="@+id/labelEggSATK"
                android:layout_row="0"
                android:layout_column="4"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-10dp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_sdef"
                android:id="@+id/labelEggSDEF"
                android:layout_row="0"
                android:layout_column="5"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textIsSelectable="false"
                android:textAlignment="gravity"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-10dp"
                android:layout_marginBottom="4dp" />

            <CheckBox
                style="@style/AppTheme"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggHP"
                android:checked="false"
                android:button="@android:color/transparent"
                android:maxHeight="30dp"
                android:maxWidth="20dp"
                android:background="@drawable/ic_iv_circle_selector"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/checkBoxEggATK"
                android:checked="false"
                android:background="@drawable/ic_iv_triangle_selector"
                android:button="@android:color/transparent"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_gravity="center_horizontal" />

        </GridLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:id="@+id/confirmEggButton"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>